--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,308 @@
-.App {
+@keyframes slideInFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+body {
+  background-color: rgb(11, 11, 54);
+  width: 105%;
+  overflow-x: hidden;
+}
+*{
+    scroll-behavior: smooth;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+  
+}
+nav {
+    height: 4vmax;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.507);
+    position: sticky;
+    top: 0%;
+    /* background-color: white; */
+    z-index: 10000;
+    background-color:  rgb(21, 11, 72);
+    color: white;
+    width: 100%;
+  }
+  
+  .left {
+    width: 20%;
+    display: flex;
+  
+    justify-content: center;
+  }
+  .left > a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.4vmax;
+  
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  
+  .mid {
+    width: 100%;
+  
+    display: flex;
+    justify-content: space-evenly;
+    align-self: stretch;
+  }
+  
+  .mid > a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.4vmax;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .mid > a:hover {
+    border-bottom: 2px solid white;
+    color: white;
+  }
+
+  .home{
+    height: 100%;
+    width: 100%;
+    /* background-image: linear-gradient(to right, rgb(80, 71, 107),rgb(6, 6, 95)); */
+    display: flex;
+    justify-content:space-between;
+    /* padding-right: 7vw; */
+    background-color:rgb(26, 26, 75)
+}
+.homesec{
+    width: 100%;
+    height: 100%;
+    /* border: 2px solid rebeccapurple; */
+}
+
+#rightcontainer{
+    display: flex;
+    justify-content: end;
+
+}
+
+#rightcontainer img{
+    margin-right: 7vmax;
+    width: 120px;
+    height: 120px;
+    filter: drop-shadow(0,0,10px,rgba(0, 0, 0, 0.846));
+    animation: slideInFromTop 2s ease-in-out;
+
+}
+#leftcontainer{
+    display: flex;
+    flex-direction: column;
+    padding: 2vmax;
+    align-items: start;
+    justify-content: center;
+    box-sizing: border-box;
+    font-size: 1rem;
+    color: white;
+    font-weight: 600;
+}
+.purple{
+    color: blueviolet;
+}
+#element{
+    color: blueviolet;
+}
+
+#products > h1{
+  font-size: 3vmax;
+  text-align: center;
+  margin: 5vmax auto;
+  border-bottom: 5px solid white;
+  padding: 1vmax;
+  padding: 1.1vmax;
+  width: 20vmax;
+  color: blueviolet;
+}
+#products > h1:hover{
+  border-bottom: 5px solid crimson;
+
+}
+.productscontainer{
+  display: flex;
+  /* background-color: aqua; */
+  height: 50%;
+ max-width: 80vw;
+ margin: auto;
+ flex-wrap: wrap;
+ justify-content: space-evenly;
+ padding-bottom: 2vh;
+
+
+}
+.products1{
+  /* border: 2px solid crimson; */
+  /* width: 25vmax; */
+  height: 18vmax;
+  transition: all 0.3ms;
+  cursor: pointer;
+  height: 14vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
+}
+.products1 > img{
+  width: 8vmax;
+  animation: slideInFromTop 2s ease-in-out;
+
+}
+#products2 > h1{
+  font-size: 3vmax;
+  text-align: center;
+  margin: 5vmax auto;
+  border-bottom: 5px solid white;
+  padding: 1vmax;
+  padding: 1.1vmax;
+  width: 20vmax;
+  color: blueviolet;
+}
+#products2 > h1:hover{
+  border-bottom: 5px solid crimson;
+
+}
+.products2container{
+  display: flex;
+  /* background-color: aqua; */
+  height: 50%;
+ max-width: 80vw;
+ margin: auto;
+ flex-wrap: wrap;
+ justify-content: space-evenly;
+ padding-bottom: 4vh;
+
+
+}
+.products2{
+  /* border: 2px solid crimson; */
+  /* width: 25vmax; */
+  height: 18vmax;
+  transition: all 0.3ms;
+  cursor: pointer;
+  height: 18vmax;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-direction: column;
+  
+}
+.products2 > img {
+  width: 14vmax;
+  animation: slideInFromTop 2s ease-in-out;
+  transition: transform 0.3s ease;
+}
+
+.products2 > img:hover {
+  transform: scale(2);
+  cursor: zoom-in;
+  z-index: 1  ;
+  position: relative;
+
+}
+
+footer {
+  /* margin-top: vmax; */
+  padding: 2vmax;
+  background-color: rgb(34, 33, 33);
+  color: white;
+  display: flex;
+  align-items: center;
+  background-color: rgb(21, 11, 72);
+}
+
+.leftFooter {
+  width: 20%;
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+}
+.leftFooter > h4 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.leftFooter > p {
+  text-align: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 10px;
+}
+.leftFooter > img {
+  width: 10vmax;
+  margin: 1vmax;
+  cursor: pointer;
+}
+
+.midFooter {
+  width: 60%;
+
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.midFooter > h1 {
+  font-size: 2vmax;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: crimson;
+}
+.midFooter > p {
+  max-width: 60%;
+font-size: 10px;
+  margin: 1vmax auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+.rightFooter {
+  width: 20%;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.rightFooter > p {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 2vmax;
+  /* text-decoration: underline; */
+}
+.rightFooter > a {
+  text-decoration: none;
+  font-size: 1.3vmax;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
+  margin: 0.5vmax;
+}
+.styleimg {
+  width: 3.5vmax;
+  margin: 1vmax;
+  cursor: pointer;
+}
+.linkg{
+  text-decoration: none;
+  font-size: 2vmax
+  ;
 }
 
-.App-link {
-  color: #61dafb;
-}
+/* Project .html css */
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.divcolor{
+background-color:  rgb(21, 11, 72);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.card {
+background-color: rgb(21, 11, 72);
+color: white;
 }
